webapp/deploy/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: analytics
  namespace: analytics
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8501
      targetPort: 8501
  selector:
    app: analytics
